<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:columnCount="2"
    android:rowCount="8">

    <ImageView
        android:id="@+id/thumbnail"
        android:layout_width="140dp"
        android:layout_height="84dp"
        android:layout_margin="5dp"
        android:layout_column="0"
        android:layout_row="0"
        android:layout_rowSpan="2"
        android:contentDescription="@string/pic_description" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="190dp"
        android:layout_margin="5dp"
        android:layout_column="1"
        android:layout_row="0"
        android:layout_rowWeight="1"
        android:textStyle="bold"/>


    <FrameLayout
        android:layout_column="1"
        android:layout_row="1"
        android:layout_gravity="fill"
        android:layout_rowWeight="2" >

        <TextView
            android:id="@+id/short_description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:maxWidth="190dp"
            android:layout_margin="5dp"
            android:breakStrategy="simple" />

    </FrameLayout>

    <TextView
        android:id="@+id/descCategory1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_gravity="center"
        android:text="@string/descCategory1"
        />

    <TextView
        android:id="@+id/paramOs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_gravity="end"
        android:layout_column="0"
        android:layout_row="3"
        android:layout_rowWeight="1"
        android:text="@string/paramOs"/>

    <TextView
        android:id="@+id/os"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="190dp"
        android:layout_margin="5dp"
        android:layout_column="1"
        android:layout_row="3"
        android:layout_rowWeight="1"/>

    <TextView
        android:id="@+id/paramProcessor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_gravity="end"
        android:layout_column="0"
        android:layout_row="4"
        android:layout_rowWeight="1"
        android:text="@string/paramProcessor"/>

    <TextView
        android:id="@+id/processor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="190dp"
        android:layout_margin="5dp"
        android:layout_column="1"
        android:layout_row="4"
        android:layout_rowWeight="1"/>

    <TextView
        android:id="@+id/paramMemory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_gravity="end"
        android:layout_column="0"
        android:layout_row="5"
        android:layout_rowWeight="1"
        android:text="@string/paramMemory"/>

    <TextView
        android:id="@+id/memory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="190dp"
        android:layout_margin="5dp"
        android:layout_column="1"
        android:layout_row="5"
        android:layout_rowWeight="1"/>

    <TextView
        android:id="@+id/paramGraphics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_gravity="end"
        android:layout_column="0"
        android:layout_row="6"
        android:layout_rowWeight="1"
        android:text="@string/paramGraphics"/>

    <TextView
        android:id="@+id/graphics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="190dp"
        android:layout_margin="5dp"
        android:layout_column="1"
        android:layout_row="6"
        android:layout_rowWeight="1"/>

    <TextView
        android:id="@+id/paramStorage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_gravity="end"
        android:layout_column="0"
        android:layout_row="7"
        android:layout_rowWeight="1"
        android:text="@string/paramStorage"/>

    <TextView
        android:id="@+id/storage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="190dp"
        android:layout_margin="5dp"
        android:layout_column="1"
        android:layout_row="7"
        android:layout_rowWeight="1"/>

</GridLayout>